<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/contentRoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/padding_screen"
            android:paddingEnd="@dimen/padding_screen"
            android:paddingTop="32dp"
            android:paddingBottom="100dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_about"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="@color/color_text_primary"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_text"
                android:textSize="20sp"
                android:textColor="@color/color_text_secondary"
                android:lineSpacingExtra="8dp"
                android:layout_marginBottom="32dp" />

            <Button
                android:id="@+id/btnBack"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/bg_neu_button"
                android:stateListAnimator="@null"
                android:text="@string/btn_back"
                android:textColor="@color/white"
                android:textSize="22sp" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
